--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ flutter:
 
   assets:
     - assets/image 9.png
+    - assets/image 8.png
+    - assets/homeremedies.jpg
+    - assets/image7.jfif
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
