--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   camera: ^0.10.5+5
   carousel_slider: ^4.0.0-nullsafety.0
   google_fonts: ^6.1.0
+  image: ^4.1.3
+  tflite_flutter: ^0.10.3
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +82,10 @@ flutter:
     - assets/ImageCarousel/Melanoma.JPG
     - assets/ImageCarousel/Pyogenicgranulomasandhemorrhage.JPG
     - assets/ImageCarousel/Sebhorrickeratosis.JPG
+
+    # model
+    - assets/model/skinmodel.tflite
+    - assets/model/model.tflite
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
